Testing for category delete endpoint.